vcs/specs/parser/fail/attributes/unclosed_attribute.vr
// @test: parse-fail
// @level: L0
// @tags: parser, attributes, unclosed, error
// @description: Test unclosed attribute parenthesis detection
// @expected-error: E011

@derive(
fn test() {}
